Archive2/85/4a60204879ebc9/output
main.cpp: In function 'int main(int, char**)':
main.cpp:32:13: error: expected primary-expression before '=' token
     if( i = =5 )
             ^
